Add referential animated gifs

--- a/code/03_interpretation_of_latent_space.ipynb
+++ b/code/03_interpretation_of_latent_space.ipynb
@@ -819,6 +819,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The animation above should look like this:\n",
+    "\n",
+    "<img src=\"../data/original/interpretation/3d_rotation.gif\" alt=\"drawing\" width=\"600\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Clustering of the learned latent space"
    ]
   },
@@ -1685,7 +1694,16 @@
    "source": [
     "Result\n",
     "\n",
-    "<img src=\"../data/new_runs/3d_clusters_rotation.gif\" alt=\"drawing\" width=\"600\"/>"
+    "<img src=\"../data/original/interpretation/3d_clusters_rotation.gif\" alt=\"drawing\" width=\"600\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The animation above should look like this:\n",
+    "\n",
+    "<img src=\"../data/original/interpretation/3d_clusters_rotation.gif\" alt=\"drawing\" width=\"600\"/>"
    ]
   },
   {
