--- a/code/04_experimental_validation_of_learned_emotions.ipynb
+++ b/code/04_experimental_validation_of_learned_emotions.ipynb
@@ -2033,6 +2033,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The animation above should look like this:\n",
+    "\n",
+    "<img src=\"../data/original/survey/test_3d_anim_all_videos_vs_emotion_test_AB.gif\" alt=\"drawing\" width=\"600\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### PAD values for each emotion (1 point = 1 emotion)\n",
     "Representations in space of the average of data points by emotion."
    ]
@@ -2297,6 +2306,15 @@
     "Result\n",
     "\n",
     "<img src=\"../data/new_runs/test_3d_anim_all_emotions_dimensions_test_AB.gif\" alt=\"drawing\" width=\"600\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The animation above should look like this:\n",
+    "\n",
+    "<img src=\"../data/original/survey/test_3d_anim_all_emotions_dimensions_test_AB.gif\" alt=\"drawing\" width=\"600\"/>"
    ]
   },
   {
